--- a/src/components/ui/errorMessage/css/errorMessage.css
+++ b/src/components/ui/errorMessage/css/errorMessage.css
@@ -1,31 +1,1 @@
-.error-message {
-  color: hsl(var(--destructive-foreground));
-  font-size: 1rem;
-  padding: 6px 12px;
-  margin: 0;
-  background-color: hsl(var(--destructive));
-  width: -moz-fit-content;
-  width: fit-content;
-  border-radius: calc(var(--radius) - 2px);
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 0.5rem;
-  position: relative;
-}
-.error-message__icon {
-  font-size: 1.75rem;
-  flex-shrink: 0;
-}
-.error-message__close-button {
-  font-size: calc(1rem + 4px);
-  background-color: black;
-  border-radius: 50%;
-  padding: 4px;
-  margin-left: 0.5rem;
-  cursor: pointer;
-}
-
-.with-margins {
-  margin: 1rem;
-} /*# sourceMappingURL=errorMessage.css.map */
+.error-message{color:hsl(var(--destructive-foreground));font-size:1rem;padding:6px 12px;margin:0;background-color:hsl(var(--destructive));width:fit-content;border-radius:calc(var(--radius) - 2px);border:hsl(var(--background));display:flex;align-items:center;justify-content:flex-start;gap:.5rem;position:relative}.error-message__icon{font-size:1.75rem;flex-shrink:0}.error-message__close-button{font-size:calc(1rem + 4px);background-color:#000;border-radius:50%;padding:4px;margin-left:.5rem;cursor:pointer}.with-margins{margin:1rem}
