--- a/src/components/ui/forms/css/form.scss
+++ b/src/components/ui/forms/css/form.scss
@@ -19,3 +19,21 @@
 //   background-color: var(--background) !important;
 //   transition: background-color 5000s ease-in-out 0s;
 // }
+
+
+.fieldError {
+  color: hsl(var(--destructive));
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+  display: block;
+  line-height: 1.3;
+
+  span {
+    display: block;
+    margin-bottom: 0.125rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
