--- a/src/LandingPages/dashboardPage/components/dashboard/dashboardSwitch/components/dashboardSelector/css/dashboardSelector.module.scss
+++ b/src/LandingPages/dashboardPage/components/dashboard/dashboardSwitch/components/dashboardSelector/css/dashboardSelector.module.scss
@@ -9,7 +9,8 @@
   align-items: center;
   gap: 0.5rem;
   transition: all 0.15s ease-in-out;
-  z-index: 100000;
+  z-index: 100;
+  width: fit-content;
 
   .select {
     padding: 0;
