--- a/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.module.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.module.scss
@@ -1,4 +1,4 @@
-.sidebar__content {
+.content {
   // ul
   display: flex;
   flex-direction: column;
@@ -8,11 +8,11 @@
   overflow: hidden;
   width: 100%;
 
-  &__item {
+  .item {
     // li
     list-style-type: none;
 
-    &__link {
+    .link {
       display: flex;
       align-items: center;
       justify-content: start;
@@ -40,6 +40,7 @@
       }
 
       &:hover {
+        cursor: pointer;
         background-color: hsl(var(--sidebar-bg));
         @media screen and (prefers-color-scheme: dark),
           screen and (-webkit-prefers-color-scheme: dark) {
@@ -56,7 +57,7 @@
       }
     }
 
-    &__link-active {
+    .activeLink {
       background-color: hsl(var(--muted));
       color: hsl(var(--foreground));
       font-weight: 600;
@@ -73,10 +74,8 @@
       }
     }
   }
-  &__localeSwitcher {
-  }
 
-  &__item-mobile-only {
+  .mobileOnlyItem {
     display: none;
     border: none;
     outline: none;
@@ -85,46 +84,46 @@
 }
 @media screen and (min-width: 769px) {
   [data-sidebar-open="false"] {
-    .sidebar__content {
+    .content {
       width: fit-content;
 
-      &__localeSwitcher {
+      .localeSwitcher {
         display: none;
       }
 
       // ul
-      &__item {
+      .item {
         width: fit-content;
         // li
 
-        &__link {
+        .link {
           width: fit-content;
           overflow: hidden;
           transition: width 0.15s ease-in-out;
 
-          .link-text {
+        }
+          .linkText {
             display: none;
             width: 0 !important;
             overflow: hidden;
             transition: width 0.15s ease-in-out;
           }
-        }
       }
     }
   }
 }
 
 [data-sidebar-open="true"] {
-  .sidebar__content {
-    &__localeSwitcher {
+  .content {
+    .localeSwitcher {
       display: none;
     }
     width: 100%;
     // ul
-    &__item {
+    .item {
       // li
       width: 100%;
-      &__link {
+      .link {
         width: 100%;
         overflow: hidden;
         position: relative;
@@ -135,7 +134,7 @@
           background-color: hsl(var(--background));
           z-index: 10;
         }
-        .link-text {
+        .linkText {
           display: flex;
           width: min-content;
           overflow: hidden;
@@ -148,10 +147,10 @@
 
 @media screen and (max-width: 768px) {
   [data-nav-open="true"] {
-    .sidebar__content {
+    .content {
       margin-top: 0;
       // ul
-      &__item-mobile-only {
+      .mobileOnlyItem {
         display: initial;
         cursor: pointer;
         button {
@@ -160,9 +159,11 @@
         }
       }
 
-      &__localeSwitcher {
+      .localeSwitcher {
         display: flex;
       }
+
     }
   }
 }
+
