--- a/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.module.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.module.scss
@@ -15,7 +15,7 @@
     .link {
       display: flex;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       white-space: nowrap;
       gap: 0.5rem;
       text-decoration: none;
