--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,36 @@ html:root {
   --border: 214.3 21.2% 80.6%;
   --input: 214.3 21.2% 80.6%;
   --ring: 220.8 74.8% 46.7%;
+
+
+  /* Accent Colors */
+  --accent-1: 210 7.7% 94.9%;
+  --accent-2: 220 31% 94.3%;
+  --accent-3: 219 52.6% 92.5%;
+  --accent-4: 218.5 83% 90.8%;
+  --accent-5: 218.6 100% 88.4%;
+  --accent-6: 219 100% 84.9%;
+  --accent-7: 218.7 92.3% 79.6%;
+  --accent-8: 219 86% 72%;
+  --accent-9: 220.8 83.3% 52.9%;
+  --accent-10: 220.8 74.8% 46.7%;
+  --accent-11: 220.9 71.3% 49.2%;
+  --accent-12: 220.5 64.7% 23.3%;
+  --accent-contrast: 0 0% 100%;
+  /* Gray Colors */
+  --gray-1: 220 11.1% 94.7%;
+  --gray-2: 214.3 22.6% 93.9%;
+  --gray-3: 216 21.7% 91%;
+  --gray-4: 214.3 23.3% 88.2%;
+  --gray-5: 215.3 24.6% 86.5%;
+  --gray-6: 216 25% 84.3%;
+  --gray-7: 214.3 21.2% 80.6%;
+  --gray-8: 216 14.9% 73.7%;
+  --gray-9: 214.7 8.4% 55.9%;
+  --gray-10: 214.7 7.8% 52%;
+  --gray-11: 213.3 8.8% 40%;
+  --gray-12: 216 22.4% 13.1%;
+  --gray-contrast: 216 22.4% 13.1%;
 }
 
 /* Dark mode */
@@ -85,7 +115,6 @@ html:root {
 
     --muted2: 217.2 32.6% 17.5%;
     --muted2-foreground: 215 20.2% 65.1%;
-    --destructive: 0 62.8% 30.6%;
     --destructive-text: 0 84.2% 60.2%;
 
     --warning: 47.9 95.8% 53.1%;
@@ -117,7 +146,33 @@ html:root {
     --input: 211.8 12.6% 26.5%;
     --ring: 220.4 59% 45.9%;
 
-    --ring: 224.3 76.3% 48%;
+    --accent-1: 225 66.7% 4.7%;
+    --accent-2: 220.9 64.7% 6.7%;
+    --accent-3: 221.1 80.3% 13.9%;
+    --accent-4: 220.2 82% 19.6%;
+    --accent-5: 220.6 75% 25.1%;
+    --accent-6: 220.4 66.7% 30.6%;
+    --accent-7: 220.5 62.6% 36.7%;
+    --accent-8: 220.3 61.4% 43.7%;
+    --accent-9: 220.8 83.3% 52.9%;
+    --accent-10: 220.4 59% 45.9%;
+    --accent-11: 216.9 100% 76.1%;
+    --accent-12: 217.8 100% 91%;
+    --accent-contrast: 0 0% 100%;
+    /* Gray Colors */
+    --gray-1: 216 50% 3.9%;
+    --gray-2: 212.3 37.1% 6.9%;
+    --gray-3: 212 27.3% 10.8%;
+    --gray-4: 216 21.1% 13.9%;
+    --gray-5: 216 17.2% 17.1%;
+    --gray-6: 213.8 15.1% 20.8%;
+    --gray-7: 211.8 12.6% 26.5%;
+    --gray-8: 213.3 9.6% 36.9%;
+    --gray-9: 213.3 8.3% 42.4%;
+    --gray-10: 213.3 7.3% 48.2%;
+    --gray-11: 213 13.3% 70.6%;
+    --gray-12: 214.3 46.7% 94.1%;
+    --gray-contrast: 214.3 46.7% 94.1%;
   }
 }
 
