--- a/src/components/form/components/customForm/css/customForm.module.scss
+++ b/src/components/form/components/customForm/css/customForm.module.scss
@@ -1,8 +1,12 @@
 .customForm {
+  --custom-form-surface-color: unset;
   width: 100%;
 
   display: flex;
 
   flex-direction: column;
   gap: 26px;
+
+  background-color: var(--custom-form-surface-color), hsl(var(--card));
+
 }
