--- a/src/components/form/components/customTextArea/css/customTextArea.module.scss
+++ b/src/components/form/components/customTextArea/css/customTextArea.module.scss
@@ -5,7 +5,7 @@
   // font-size: 0.8125rem;
 
   font-family: inherit;
-  background-color: hsl(var(--card));
+  background-color: var(--custom-form-surface-color), hsl(var(--card));
   border: 1px solid hsl(var(--input));
   outline: none;
   border-radius: calc(var(--radius) - 2px);
@@ -19,7 +19,7 @@
   overflow: visible;
 
   &:autofill {
-    box-shadow: inset 0 0 0 100px hsl(var(--card));
+    box-shadow: inset 0 0 0 100px var(--custom-form-surface-color), hsl(var(--card));
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     appearance: textfield;
