--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
@@ -1,4 +1,8 @@
 .taskViewer {
+--taskviewer-surface: hsl(var(--gray-3));
+
+
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -17,9 +21,7 @@
   transition: transform 0.3s ease-in-out;
   transform: translateX(120%);
   //max-height: 100dvh;
-  overflow: scroll !important; /* Adds a vertical scrollbar if content exceeds max-height */
 
-  background-color: hsl(var(--card));
 
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -66,7 +68,6 @@
     padding: 6px 12px;
     height: 45px;
     font-family: inherit;
-    background-color: hsl(var(--card));
     border: 1px solid hsl(var(--input));
     outline: none;
     border-radius: calc(var(--radius) - 2px);
