--- a/src/components/form/components/customForm/css/customForm.module.scss
+++ b/src/components/form/components/customForm/css/customForm.module.scss
@@ -7,6 +7,6 @@
   flex-direction: column;
   gap: 26px;
 
-  background-color: var(--custom-form-surface-color), hsl(var(--card));
+  background-color: var(--custom-form-surface-color) hsl(var(--card));
 
 }
